@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -59,9 +58,9 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWit
 		"management.endpoints.web.exposure.include=*", "spring.jackson.default-property-inclusion=non_null" })
 public abstract class AbstractEndpointDocumentationTests {
 
-	protected String describeEnumValues(Class<? extends Enum<?>> enumType) {
-		return StringUtils.collectionToDelimitedString(Stream.of(enumType.getEnumConstants())
-				.map((constant) -> "`" + constant.name() + "`").collect(Collectors.toList()), ", ");
+	protected static String describeEnumValues(Class<? extends Enum<?>> enumType) {
+		return StringUtils.collectionToDelimitedString(
+				Stream.of(enumType.getEnumConstants()).map((constant) -> "`" + constant.name() + "`").toList(), ", ");
 	}
 
 	protected OperationPreprocessor limit(String... keys) {
@@ -77,13 +76,11 @@ public abstract class AbstractEndpointDocumentationTests {
 				Object target = payload;
 				Map<Object, Object> parent = null;
 				for (String key : keys) {
-					if (target instanceof Map) {
-						parent = (Map<Object, Object>) target;
-						target = parent.get(key);
-					}
-					else {
+					if (!(target instanceof Map)) {
 						throw new IllegalStateException();
 					}
+					parent = (Map<Object, Object>) target;
+					target = parent.get(key);
 				}
 				if (target instanceof Map) {
 					parent.put(keys[keys.length - 1], select((Map<String, Object>) target, filter));
@@ -114,8 +111,7 @@ public abstract class AbstractEndpointDocumentationTests {
 
 	@SuppressWarnings("unchecked")
 	private <T> List<Object> select(List<Object> candidates, Predicate<T> filter) {
-		return candidates.stream().filter((candidate) -> filter.test((T) candidate)).limit(3)
-				.collect(Collectors.toList());
+		return candidates.stream().filter((candidate) -> filter.test((T) candidate)).limit(3).toList();
 	}
 
 	@Configuration(proxyBeanMethods = false)
