@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,12 +21,11 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 
 import io.micrometer.core.instrument.Meter;
 import io.micrometer.core.instrument.MeterRegistry;
@@ -58,14 +57,14 @@ public class MetricsEndpoint {
 
 	@ReadOperation
 	public ListNamesResponse listNames() {
-		Set<String> names = new LinkedHashSet<>();
+		Set<String> names = new TreeSet<>();
 		collectNames(names, this.registry);
 		return new ListNamesResponse(names);
 	}
 
 	private void collectNames(Set<String> names, MeterRegistry registry) {
-		if (registry instanceof CompositeMeterRegistry) {
-			((CompositeMeterRegistry) registry).getRegistries().forEach((member) -> collectNames(names, member));
+		if (registry instanceof CompositeMeterRegistry compositeMeterRegistry) {
+			compositeMeterRegistry.getRegistries().forEach((member) -> collectNames(names, member));
 		}
 		else {
 			registry.getMeters().stream().map(this::getName).forEach(names::add);
@@ -92,10 +91,7 @@ public class MetricsEndpoint {
 	}
 
 	private List<Tag> parseTags(List<String> tags) {
-		if (tags == null) {
-			return Collections.emptyList();
-		}
-		return tags.stream().map(this::parseTag).collect(Collectors.toList());
+		return (tags != null) ? tags.stream().map(this::parseTag).toList() : Collections.emptyList();
 	}
 
 	private Tag parseTag(String tag) {
@@ -109,8 +105,8 @@ public class MetricsEndpoint {
 	}
 
 	private Collection<Meter> findFirstMatchingMeters(MeterRegistry registry, String name, Iterable<Tag> tags) {
-		if (registry instanceof CompositeMeterRegistry) {
-			return findFirstMatchingMeters((CompositeMeterRegistry) registry, name, tags);
+		if (registry instanceof CompositeMeterRegistry compositeMeterRegistry) {
+			return findFirstMatchingMeters(compositeMeterRegistry, name, tags);
 		}
 		return registry.find(name).tags(tags).meters();
 	}
@@ -157,8 +153,7 @@ public class MetricsEndpoint {
 	}
 
 	private <K, V, T> List<T> asList(Map<K, V> map, BiFunction<K, V, T> mapper) {
-		return map.entrySet().stream().map((entry) -> mapper.apply(entry.getKey(), entry.getValue()))
-				.collect(Collectors.toList());
+		return map.entrySet().stream().map((entry) -> mapper.apply(entry.getKey(), entry.getValue())).toList();
 	}
 
 	/**
@@ -225,7 +220,7 @@ public class MetricsEndpoint {
 	}
 
 	/**
-	 * A set of tags for further dimensional drilldown and their potential values.
+	 * A set of tags for further dimensional drill-down and their potential values.
 	 */
 	public static final class AvailableTag {
 
@@ -272,7 +267,7 @@ public class MetricsEndpoint {
 
 		@Override
 		public String toString() {
-			return "MeasurementSample{" + "statistic=" + this.statistic + ", value=" + this.value + '}';
+			return "MeasurementSample{statistic=" + this.statistic + ", value=" + this.value + '}';
 		}
 
 	}
