@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package org.springframework.boot.autoconfigure.mongo;
 
-import java.util.stream.Collectors;
-
 import com.mongodb.MongoClientSettings;
 import com.mongodb.MongoClientSettings.Builder;
 import com.mongodb.connection.netty.NettyStreamFactoryFactory;
@@ -29,6 +27,7 @@ import reactor.core.publisher.Flux;
 
 import org.springframework.beans.factory.DisposableBean;
 import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
@@ -37,28 +36,43 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
-import org.springframework.core.env.Environment;
 
 /**
  * {@link EnableAutoConfiguration Auto-configuration} for Reactive Mongo.
  *
  * @author Mark Paluch
  * @author Stephane Nicoll
+ * @author Scott Frederick
  * @since 2.0.0
  */
-@Configuration(proxyBeanMethods = false)
+@AutoConfiguration
 @ConditionalOnClass({ MongoClient.class, Flux.class })
 @EnableConfigurationProperties(MongoProperties.class)
 public class MongoReactiveAutoConfiguration {
 
 	@Bean
 	@ConditionalOnMissingBean
-	public MongoClient reactiveStreamsMongoClient(MongoProperties properties, Environment environment,
-			ObjectProvider<MongoClientSettingsBuilderCustomizer> builderCustomizers,
-			ObjectProvider<MongoClientSettings> settings) {
-		ReactiveMongoClientFactory factory = new ReactiveMongoClientFactory(properties, environment,
-				builderCustomizers.orderedStream().collect(Collectors.toList()));
-		return factory.createMongoClient(settings.getIfAvailable());
+	public MongoClient reactiveStreamsMongoClient(
+			ObjectProvider<MongoClientSettingsBuilderCustomizer> builderCustomizers, MongoClientSettings settings) {
+		ReactiveMongoClientFactory factory = new ReactiveMongoClientFactory(
+				builderCustomizers.orderedStream().toList());
+		return factory.createMongoClient(settings);
+	}
+
+	@Configuration(proxyBeanMethods = false)
+	@ConditionalOnMissingBean(MongoClientSettings.class)
+	static class MongoClientSettingsConfiguration {
+
+		@Bean
+		MongoClientSettings mongoClientSettings() {
+			return MongoClientSettings.builder().build();
+		}
+
+		@Bean
+		MongoPropertiesClientSettingsBuilderCustomizer mongoPropertiesCustomizer(MongoProperties properties) {
+			return new MongoPropertiesClientSettingsBuilderCustomizer(properties);
+		}
+
 	}
 
 	@Configuration(proxyBeanMethods = false)
@@ -67,7 +81,7 @@ public class MongoReactiveAutoConfiguration {
 
 		@Bean
 		@Order(Ordered.HIGHEST_PRECEDENCE)
-		public NettyDriverMongoClientSettingsBuilderCustomizer nettyDriverCustomizer(
+		NettyDriverMongoClientSettingsBuilderCustomizer nettyDriverCustomizer(
 				ObjectProvider<MongoClientSettings> settings) {
 			return new NettyDriverMongoClientSettingsBuilderCustomizer(settings);
 		}
@@ -77,14 +91,14 @@ public class MongoReactiveAutoConfiguration {
 	/**
 	 * {@link MongoClientSettingsBuilderCustomizer} to apply Mongo client settings.
 	 */
-	private static final class NettyDriverMongoClientSettingsBuilderCustomizer
+	static final class NettyDriverMongoClientSettingsBuilderCustomizer
 			implements MongoClientSettingsBuilderCustomizer, DisposableBean {
 
 		private final ObjectProvider<MongoClientSettings> settings;
 
 		private volatile EventLoopGroup eventLoopGroup;
 
-		private NettyDriverMongoClientSettingsBuilderCustomizer(ObjectProvider<MongoClientSettings> settings) {
+		NettyDriverMongoClientSettingsBuilderCustomizer(ObjectProvider<MongoClientSettings> settings) {
 			this.settings = settings;
 		}
 
